Added Death Stranding Health-Stamina QC, Ran Docs Script

--- a/docs/PS3/BLES01039.md
+++ b/docs/PS3/BLES01039.md
@@ -4,7 +4,7 @@
 ### 2. Legacy Mode\Created Boxer
 ### 3. Money $9999999
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x1D0DD8:0098967F
@@ -12,7 +12,7 @@ write at 0x1D0DD8:0098967F
 
 ### 4. XP 99999
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x1D0D48:0001869F
@@ -20,7 +20,7 @@ write at 0x1D0D48:0001869F
 
 ### 5. Strength 100
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x1D0C28:00000064
@@ -28,7 +28,7 @@ write at 0x1D0C28:00000064
 
 ### 6. Speed 100
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x1D0C2C:00000064
@@ -36,7 +36,7 @@ write at 0x1D0C2C:00000064
 
 ### 7. Endurance 100
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x1D0C30:00000064
@@ -44,7 +44,7 @@ write at 0x1D0C30:00000064
 
 ### 8. Conditioning 100
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x1D0C34:00000064
@@ -52,7 +52,7 @@ write at 0x1D0C34:00000064
 
 ### 9. Toughness 100
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x1D0C38:00000064
@@ -60,7 +60,7 @@ write at 0x1D0C38:00000064
 
 ### 10. Reflexes 100
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x1D0C3C:00000064
@@ -68,7 +68,7 @@ write at 0x1D0C3C:00000064
 
 ### 11. Cuts 100
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x1D0C40:00000064
@@ -76,7 +76,7 @@ write at 0x1D0C40:00000064
 
 ### 12. Swelling 100
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x1D0C44:00000064
@@ -85,7 +85,7 @@ write at 0x1D0C44:00000064
 ### 13. Legacy Mode\Imported Boxer
 ### 14. Money $9999999
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x5f1e90:0098967F
@@ -93,7 +93,7 @@ write at 0x5f1e90:0098967F
 
 ### 15. XP 99999
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x5f1e00:0001869F
@@ -101,7 +101,7 @@ write at 0x5f1e00:0001869F
 
 ### 16. Strength 100
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x5F1CE0:00000064
@@ -109,7 +109,7 @@ write at 0x5F1CE0:00000064
 
 ### 17. Speed 100
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x5F1CE4:00000064
@@ -117,7 +117,7 @@ write at 0x5F1CE4:00000064
 
 ### 18. Endurance 100
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x5F1CE8:00000064
@@ -125,7 +125,7 @@ write at 0x5F1CE8:00000064
 
 ### 19. Conditioning 100
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x5F1CEC:00000064
@@ -133,7 +133,7 @@ write at 0x5F1CEC:00000064
 
 ### 20. Toughness 100
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x5F1CF0:00000064
@@ -141,7 +141,7 @@ write at 0x5F1CF0:00000064
 
 ### 21. Reflexes 100
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x5F1CF4:00000064
@@ -149,7 +149,7 @@ write at 0x5F1CF4:00000064
 
 ### 22. Cuts 100
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x5F1CF8:00000064
@@ -157,7 +157,7 @@ write at 0x5F1CF8:00000064
 
 ### 23. Swelling 100
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x5F1CFC:00000064
@@ -166,7 +166,7 @@ write at 0x5F1CFC:00000064
 ### 24. Legacy Mode\Max Skills
 ### 25. Jab Head 20
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x1D0BE4:00000014
@@ -174,7 +174,7 @@ write at 0x1D0BE4:00000014
 
 ### 26. Straight Head 20
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x1D0BE8:00000014
@@ -182,7 +182,7 @@ write at 0x1D0BE8:00000014
 
 ### 27. Jab Body 20
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x1D0BEC:00000014
@@ -190,7 +190,7 @@ write at 0x1D0BEC:00000014
 
 ### 28. Straight Body 20
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x1D0BF0:00000014
@@ -198,7 +198,7 @@ write at 0x1D0BF0:00000014
 
 ### 29. Left Hook Head 20
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x1D0BF4:00000014
@@ -206,7 +206,7 @@ write at 0x1D0BF4:00000014
 
 ### 30. Right Hook Head 20
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x1D0BF8:00000014
@@ -214,7 +214,7 @@ write at 0x1D0BF8:00000014
 
 ### 31. Left Uppercut Head 20
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x1D0BFC:00000014
@@ -222,7 +222,7 @@ write at 0x1D0BFC:00000014
 
 ### 32. Right Uppercut Head 20
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x1D0C00:00000014
@@ -230,7 +230,7 @@ write at 0x1D0C00:00000014
 
 ### 33. Left Hook Body 20
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x1D0C04:00000014
@@ -238,7 +238,7 @@ write at 0x1D0C04:00000014
 
 ### 34. Right Hook Body 20
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x1D0C08:00000014
@@ -246,7 +246,7 @@ write at 0x1D0C08:00000014
 
 ### 35. Left Uppercut Body 20
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x1D0C0C:00000014
@@ -254,7 +254,7 @@ write at 0x1D0C0C:00000014
 
 ### 36. Right Uppercut Body 20
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x1D0C10:00000014
@@ -262,7 +262,7 @@ write at 0x1D0C10:00000014
 
 ### 37. Combinations 20
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x1D0C14:00000014
@@ -270,7 +270,7 @@ write at 0x1D0C14:00000014
 
 ### 38. Blocking 20
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x1D0C18:00000014
@@ -278,7 +278,7 @@ write at 0x1D0C18:00000014
 
 ### 39. Head Movement 20
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x1D0C1C:00000014
@@ -286,7 +286,7 @@ write at 0x1D0C1C:00000014
 
 ### 40. Heart 20
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x1D0C20:00000014
@@ -294,7 +294,7 @@ write at 0x1D0C20:00000014
 
 ### 41. Chin 20
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 write at 0x1D0C24:00000014
@@ -303,7 +303,7 @@ write at 0x1D0C24:00000014
 ### 42. Legacy Mode\Checksum
 ### 43. Update CRC32 (required)
 
-Target File: `BLES0103902*/SYS-DATA`
+Target File: `BLES0103902*\SYS-DATA`
 
 ```
 set range:0x1C,0x81B33B
@@ -315,7 +315,7 @@ write at 0x10:[hash]
 ### 45. Online Boxer\Max Skills
 ### 46. Jab Head 20
 
-Target File: `BLES0103906*/SYS-DATA`
+Target File: `BLES0103906*\SYS-DATA`
 
 ```
 write at 0x1DC:00000014
@@ -323,7 +323,7 @@ write at 0x1DC:00000014
 
 ### 47. Straight Head 20
 
-Target File: `BLES0103906*/SYS-DATA`
+Target File: `BLES0103906*\SYS-DATA`
 
 ```
 write at 0x1E0:00000014
@@ -331,7 +331,7 @@ write at 0x1E0:00000014
 
 ### 48. Jab Body 20
 
-Target File: `BLES0103906*/SYS-DATA`
+Target File: `BLES0103906*\SYS-DATA`
 
 ```
 write at 0x1E4:00000014
@@ -339,7 +339,7 @@ write at 0x1E4:00000014
 
 ### 49. Straight Body 20
 
-Target File: `BLES0103906*/SYS-DATA`
+Target File: `BLES0103906*\SYS-DATA`
 
 ```
 write at 0x1E8:00000014
@@ -347,7 +347,7 @@ write at 0x1E8:00000014
 
 ### 50. Left Hook Head 20
 
-Target File: `BLES0103906*/SYS-DATA`
+Target File: `BLES0103906*\SYS-DATA`
 
 ```
 write at 0x1EC:00000014
@@ -355,7 +355,7 @@ write at 0x1EC:00000014
 
 ### 51. Right Hook Head 20
 
-Target File: `BLES0103906*/SYS-DATA`
+Target File: `BLES0103906*\SYS-DATA`
 
 ```
 write at 0x1F0:00000014
@@ -363,7 +363,7 @@ write at 0x1F0:00000014
 
 ### 52. Left Uppercut Head 20
 
-Target File: `BLES0103906*/SYS-DATA`
+Target File: `BLES0103906*\SYS-DATA`
 
 ```
 write at 0x1F4:00000014
@@ -371,7 +371,7 @@ write at 0x1F4:00000014
 
 ### 53. Right Uppercut Head 20
 
-Target File: `BLES0103906*/SYS-DATA`
+Target File: `BLES0103906*\SYS-DATA`
 
 ```
 write at 0x1F8:00000014
@@ -379,7 +379,7 @@ write at 0x1F8:00000014
 
 ### 54. Left Hook Body 20
 
-Target File: `BLES0103906*/SYS-DATA`
+Target File: `BLES0103906*\SYS-DATA`
 
 ```
 write at 0x1FC:00000014
@@ -387,7 +387,7 @@ write at 0x1FC:00000014
 
 ### 55. Right Hook Body 20
 
-Target File: `BLES0103906*/SYS-DATA`
+Target File: `BLES0103906*\SYS-DATA`
 
 ```
 write at 0x200:00000014
@@ -395,7 +395,7 @@ write at 0x200:00000014
 
 ### 56. Left Uppercut Body 20
 
-Target File: `BLES0103906*/SYS-DATA`
+Target File: `BLES0103906*\SYS-DATA`
 
 ```
 write at 0x204:00000014
@@ -403,7 +403,7 @@ write at 0x204:00000014
 
 ### 57. Right Uppercut Body 20
 
-Target File: `BLES0103906*/SYS-DATA`
+Target File: `BLES0103906*\SYS-DATA`
 
 ```
 write at 0x208:00000014
@@ -411,7 +411,7 @@ write at 0x208:00000014
 
 ### 58. Combinations 20
 
-Target File: `BLES0103906*/SYS-DATA`
+Target File: `BLES0103906*\SYS-DATA`
 
 ```
 write at 0x20C:00000014
@@ -419,7 +419,7 @@ write at 0x20C:00000014
 
 ### 59. Blocking 20
 
-Target File: `BLES0103906*/SYS-DATA`
+Target File: `BLES0103906*\SYS-DATA`
 
 ```
 write at 0x210:00000014
@@ -427,7 +427,7 @@ write at 0x210:00000014
 
 ### 60. Head Movement 20
 
-Target File: `BLES0103906*/SYS-DATA`
+Target File: `BLES0103906*\SYS-DATA`
 
 ```
 write at 0x214:00000014
@@ -435,7 +435,7 @@ write at 0x214:00000014
 
 ### 61. Heart 20
 
-Target File: `BLES0103906*/SYS-DATA`
+Target File: `BLES0103906*\SYS-DATA`
 
 ```
 write at 0x218:00000014
@@ -443,7 +443,7 @@ write at 0x218:00000014
 
 ### 62. Chin 20
 
-Target File: `BLES0103906*/SYS-DATA`
+Target File: `BLES0103906*\SYS-DATA`
 
 ```
 write at 0x21C:00000014
@@ -452,7 +452,7 @@ write at 0x21C:00000014
 ### 63. Online Boxer\Physical
 ### 64. Strength 100
 
-Target File: `BLES0103906*/SYS-DATA`
+Target File: `BLES0103906*\SYS-DATA`
 
 ```
 write at 0x220:00000064
@@ -460,7 +460,7 @@ write at 0x220:00000064
 
 ### 65. Speed 100
 
-Target File: `BLES0103906*/SYS-DATA`
+Target File: `BLES0103906*\SYS-DATA`
 
 ```
 write at 0x224:00000064
@@ -468,7 +468,7 @@ write at 0x224:00000064
 
 ### 66. Endurance 100
 
-Target File: `BLES0103906*/SYS-DATA`
+Target File: `BLES0103906*\SYS-DATA`
 
 ```
 write at 0x228:00000064
@@ -476,7 +476,7 @@ write at 0x228:00000064
 
 ### 67. Conditioning 100
 
-Target File: `BLES0103906*/SYS-DATA`
+Target File: `BLES0103906*\SYS-DATA`
 
 ```
 write at 0x22C:00000064
@@ -484,7 +484,7 @@ write at 0x22C:00000064
 
 ### 68. Toughness 100
 
-Target File: `BLES0103906*/SYS-DATA`
+Target File: `BLES0103906*\SYS-DATA`
 
 ```
 write at 0x230:00000064
@@ -492,7 +492,7 @@ write at 0x230:00000064
 
 ### 69. Reflexes 100
 
-Target File: `BLES0103906*/SYS-DATA`
+Target File: `BLES0103906*\SYS-DATA`
 
 ```
 write at 0x234:00000064
@@ -500,7 +500,7 @@ write at 0x234:00000064
 
 ### 70. Cuts 100
 
-Target File: `BLES0103906*/SYS-DATA`
+Target File: `BLES0103906*\SYS-DATA`
 
 ```
 write at 0x238:00000064
@@ -508,7 +508,7 @@ write at 0x238:00000064
 
 ### 71. Swelling 100
 
-Target File: `BLES0103906*/SYS-DATA`
+Target File: `BLES0103906*\SYS-DATA`
 
 ```
 write at 0x23C:00000064
@@ -517,7 +517,7 @@ write at 0x23C:00000064
 ### 72. Online Boxer\Checksum
 ### 73. Update CRC32 (required)
 
-Target File: `BLES0103906*/SYS-DATA`
+Target File: `BLES0103906*\SYS-DATA`
 
 ```
 set range:0x1C,0x81B33B
