--- a/docs/PS3/BLJM60522.md
+++ b/docs/PS3/BLJM60522.md
@@ -2,7 +2,7 @@
 
 ### 1. Master League - Money Yen 999,999,900,000
 
-Target File: `BLJM60522ML**/DATA.BIN`
+Target File: `BLJM60522ML*\DATA.BIN`
 
 ```
 001B75FF 000000E8
@@ -11,7 +11,7 @@ Target File: `BLJM60522ML**/DATA.BIN`
 
 ### 2. Master League - GP 999,900
 
-Target File: `BLJM60522ML**/DATA.BIN`
+Target File: `BLJM60522ML*\DATA.BIN`
 
 ```
 201B82C0 000F41DC
@@ -19,7 +19,7 @@ Target File: `BLJM60522ML**/DATA.BIN`
 
 ### 3. Master League - Check Sum Update crc32
 
-Target File: `BLJM60522ML**/DATA.BIN`
+Target File: `BLJM60522ML*\DATA.BIN`
 
 ```
 write at 0x8: 00000000
@@ -30,7 +30,7 @@ write at 0x8:[hash]
 
 ### 4. Become a Legend - Money Yen 999,999,900,000
 
-Target File: `BLJM60522BL**/DATA.BIN`
+Target File: `BLJM60522BL*\DATA.BIN`
 
 ```
 001B82C7 000000E8
@@ -39,7 +39,7 @@ Target File: `BLJM60522BL**/DATA.BIN`
 
 ### 5. Become a Legend - GP 999,900
 
-Target File: `BLJM60522BL**/DATA.BIN`
+Target File: `BLJM60522BL*\DATA.BIN`
 
 ```
 201B82C0 000F41DC
@@ -47,7 +47,7 @@ Target File: `BLJM60522BL**/DATA.BIN`
 
 ### 6. Become a Legend - Check Sum Update crc32
 
-Target File: `BLJM60522BL**/DATA.BIN`
+Target File: `BLJM60522BL*\DATA.BIN`
 
 ```
 write at 0x8: 00000000
