--- a/docs/PS3/BLJS10256.md
+++ b/docs/PS3/BLJS10256.md
@@ -1,6 +1,20 @@
 # BLJS10256.savepatch
 
-### 1. MAX FUNDS 99,999,999
+### 1. WADD Checksum Init (Required)
+
+Target File: `STAGE.BIN`
+
+```
+set [value]:read(0x0, 2)
+set [value]:endian_swap
+set [csum]:0
+set [csum]:wadd_le(0x00002,0x044060)
+set [csum]:right([csum],2)
+set [hash]:0
+set [hash]:[value]-[csum]
+```
+
+### 2. MAX FUNDS 99,999,999
 
 Target File: `STAGE.BIN`
 
@@ -8,7 +22,7 @@ Target File: `STAGE.BIN`
 20000440 FFE0F505
 ```
 
-### 2. stage data of all characters PP 65,535
+### 3. stage data of all characters PP 65,535
 
 Target File: `STAGE.BIN`
 
@@ -17,7 +31,7 @@ Target File: `STAGE.BIN`
 41A500E0 00000000
 ```
 
-### 3. stage data possession Z chip 99,999
+### 4. stage data possession Z chip 99,999
 
 Target File: `STAGE.BIN`
 
@@ -25,7 +39,7 @@ Target File: `STAGE.BIN`
 2000044C 9F860100
 ```
 
-### 4. Stage total data acquisition chip Z 99,999
+### 5. Stage total data acquisition chip Z 99,999
 
 Target File: `STAGE.BIN`
 
@@ -33,7 +47,7 @@ Target File: `STAGE.BIN`
 20000450 9F860100
 ```
 
-### 5. 99 pieces stage all data enhancement parts
+### 6. 99 pieces stage all data enhancement parts
 
 Target File: `STAGE.BIN`
 
@@ -44,7 +58,7 @@ Target File: `STAGE.BIN`
 40460018 00000000
 ```
 
-### 6.  All data stage pilot training all MAX
+### 7.  All data stage pilot training all MAX
 
 Target File: `STAGE.BIN`
 
@@ -59,7 +73,7 @@ Target File: `STAGE.BIN`
 41A500E0 00000000
 ```
 
-### 7. All pilot EXP49000
+### 8. All pilot EXP49000
 
 Target File: `STAGE.BIN`
 
@@ -68,7 +82,7 @@ Target File: `STAGE.BIN`
 41A500E0 00000000
 ```
 
-### 8. All pilot shot down number 999
+### 9. All pilot shot down number 999
 
 Target File: `STAGE.BIN`
 
@@ -77,7 +91,7 @@ Target File: `STAGE.BIN`
 41A500E0 00000000
 ```
 
-### 9. stage data possession funds 29,999,999
+### 10. stage data possession funds 29,999,999
 
 Target File: `STAGE.BIN`
 
@@ -85,7 +99,7 @@ Target File: `STAGE.BIN`
 20000440 7FC3C901
 ```
 
-### 10.  Stage total data acquisition funds 29,999,999
+### 11.  Stage total data acquisition funds 29,999,999
 
 Target File: `STAGE.BIN`
 
@@ -93,7 +107,7 @@ Target File: `STAGE.BIN`
 20000444 7FC3C901
 ```
 
-### 11. Main Character Skill Mod love + sniper + assault + air force
+### 12. Main Character Skill Mod love + sniper + assault + air force
 
 Target File: `STAGE.BIN`
 
@@ -115,7 +129,7 @@ Target File: `STAGE.BIN`
 20033FF7 14010100
 ```
 
-### 12. All Route Clear
+### 13. All Route Clear
 
 Target File: `STAGE.BIN`
 
@@ -130,5 +144,19 @@ Target File: `STAGE.BIN`
 400E0001 00000000
 4000018A 000000FF
 40120001 00000000
+```
+
+### 14. WADD Checksum Update (Required)
+
+Target File: `STAGE.BIN`
+
+```
+set [csum]:0
+set [csum]:wadd_le(0x00002,0x044060)
+set [csum]:right([csum],2)
+set [hash]:[hash]+[csum]
+set [hash]:right([hash],2)
+set [hash]:endian_swap
+write at 0x00:[hash]
 ```
 
