--- a/docs/PS3/BLUS30127.md
+++ b/docs/PS3/BLUS30127.md
@@ -1,6 +1,6 @@
 # BLUS30127.savepatch
 
-### 1. RED:INFO: Some patches may not be supported by BSD yet
+### 1.  Some patches may not be supported by BSD yet
 ### 2. Max Money
 
 Target File: `BLUS30127SGTA4*\RAGE.SAV`
