--- a/docs/PS3/BLUS30971.md
+++ b/docs/PS3/BLUS30971.md
@@ -1,6 +1,6 @@
 # BLUS30971.savepatch
 
-### 1. red:INFO: Currently BSD is not compatible with this title. This title has 2nd layer encryption.
+### 1.  Currently BSD is not compatible with this title. This title has 2nd layer encryption.
 ### 2. Unlock Everything
 
 Target File: `BLUS30971SYSTEM_SAVE\SAVE_SYS.DAT`
