--- a/docs/PS4/CUSA12605.md
+++ b/docs/PS4/CUSA12605.md
@@ -1,7 +1,24 @@
 # CUSA12605.savepatch
 
 ### 1. Untested - Make sure to backup your save data first
-### 2. 99999999 of all Resources all locations
+### 2. Max HP-Stamina (9999999)
+
+Target File: `*`
+
+```
+80010009 80BFFFFF
+FFFFFF42 60000000
+93000000 000000CD
+A8000000 00000030
+7F96184B 7F96184B
+7F96184B 7F96184B
+7F96184B 7F96184B
+7F96184B 7F96184B
+7F96184B 7F96184B
+7F96184B 7F96184B
+```
+
+### 3. 99999999 of all Resources all locations
 
 Target File: `*`
 
@@ -23,7 +40,7 @@ Target File: `*`
 40280098 00000000
 ```
 
-### 3. Eastern Region: Capital Knot City - Individual Set Areas Materials to 99999999
+### 4. Eastern Region: Capital Knot City - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -40,7 +57,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 4. Eastern Region: Waystation West of Capital Knot City - Individual Set Areas Materials to 99999999
+### 5. Eastern Region: Waystation West of Capital Knot City - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -57,7 +74,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 5. Eastern Region: Distribution Center West of Capital Knot City - Individual Set Areas Materials to 99999999
+### 6. Eastern Region: Distribution Center West of Capital Knot City - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -74,7 +91,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 6. Eastern Region: Wind Farm - Individual Set Areas Materials to 99999999
+### 7. Eastern Region: Wind Farm - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -91,7 +108,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 7. Eastern Region: Port Knot City - Individual Set Areas Materials to 99999999
+### 8. Eastern Region: Port Knot City - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -108,7 +125,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 8. Eastern Region: Musician - Individual Set Areas Materials to 99999999
+### 9. Eastern Region: Musician - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -125,7 +142,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 9. Central Region: Engineer - Individual Set Areas Materials to 99999999
+### 10. Central Region: Engineer - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -142,7 +159,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 10. Central Region: Elder - Individual Set Areas Materials to 99999999
+### 11. Central Region: Elder - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -159,7 +176,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 11. Central Region: Craftsman - Individual Set Areas Materials to 99999999
+### 12. Central Region: Craftsman - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -176,7 +193,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 12. Central Region: Timefall Farm - Individual Set Areas Materials to 99999999
+### 13. Central Region: Timefall Farm - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -193,7 +210,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 13. Central Region: Junk Dealer - Individual Set Areas Materials to 99999999
+### 14. Central Region: Junk Dealer - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -210,7 +227,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 14. Central Region: Chiral Artist's Studio - Individual Set Areas Materials to 99999999
+### 15. Central Region: Chiral Artist's Studio - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -227,7 +244,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 15. Central Region: Waystation North of Mountain Knot City - Individual Set Areas Materials to 99999999
+### 16. Central Region: Waystation North of Mountain Knot City - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -244,7 +261,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 16. Central Region: Peter Englert - Individual Set Areas Materials to 99999999
+### 17. Central Region: Peter Englert - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -261,7 +278,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 17. Central Region: Film Director - Individual Set Areas Materials to 99999999
+### 18. Central Region: Film Director - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -278,7 +295,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 18. Central Region: Cosplayer - Individual Set Areas Materials to 99999999
+### 19. Central Region: Cosplayer - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -295,7 +312,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 19. Central Region: Collector - Individual Set Areas Materials to 99999999
+### 20. Central Region: Collector - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -312,7 +329,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 20. Central Region: Lake Knot City - Individual Set Areas Materials to 99999999
+### 21. Central Region: Lake Knot City - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -329,7 +346,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 21. Central Region: Distribution Center South of Lake Knot City - Individual Set Areas Materials to 99999999
+### 22. Central Region: Distribution Center South of Lake Knot City - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -346,7 +363,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 22. Central Region: Weather Station - Individual Set Areas Materials to 99999999
+### 23. Central Region: Weather Station - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -363,7 +380,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 23. Central Region: South Knot City - Individual Set Areas Materials to 99999999
+### 24. Central Region: South Knot City - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -380,7 +397,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 24. Central Region: Mama's Lab - Individual Set Areas Materials to 99999999
+### 25. Central Region: Mama's Lab - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -397,7 +414,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 25. Central Region: Distribution Center North of Mountain Knot City - Individual Set Areas Materials to 99999999
+### 26. Central Region: Distribution Center North of Mountain Knot City - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -414,7 +431,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 26. Central Region: Mountain Knot City - Individual Set Areas Materials to 99999999
+### 27. Central Region: Mountain Knot City - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -431,7 +448,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 27. Max Bandwidth
+### 28. Max Bandwidth
 
 Target File: `*`
 
@@ -458,7 +475,7 @@ Target File: `*`
 40050005 00000000
 ```
 
-### 28. Birth of a legend/growth of a legend trophy quick code (complete delivery after applying)
+### 29. Birth of a legend/growth of a legend trophy quick code (complete delivery after applying)
 
 Target File: `*`
 
@@ -468,7 +485,7 @@ Target File: `*`
 400A0004 00000000
 ```
 
-### 29. Max porter grade (complete a delivery to get all the upgrades
+### 30. Max porter grade (complete a delivery to get all the upgrades
 
 Target File: `*`
 
