--- a/docs/PS4/CUSA15175.md
+++ b/docs/PS4/CUSA15175.md
@@ -528,7 +528,7 @@ Target File: `*`
 ```
 
 ### 62. -- Swap Food Items --
-### 63. RED:INFO:You must have the in-game max quantity, before using any of these.
+### 63. You must have the in-game max quantity, before using any of these.
 ### 64. When chapter 1 starts, max out money & buy everything out of the shop
 ### 65. then apply these cheats
 ### 66. Replace Bitter Chocolate With Sweet Chocolate
@@ -607,7 +607,7 @@ Target File: `*`
 28000004 3B9AC9FF
 ```
 
-### 74. RED:INFO:Must Have all of them to apply, may break save otherwise
+### 74. Must Have all of them to apply, may break save otherwise
 ### 75. Set All Material To 999999999
 
 Target File: `*`
@@ -987,4 +987,4 @@ A000CD44 00000025
 ```
 
 ### 96. Editable Templates Below
-### 97. RED:INFO:Only Use these if the above cheats aren't enough & you know what you are doing!
+### 97. Only Use these if the above cheats aren't enough & you know what you are doing!
