--- a/docs/PS4/CUSA15257.md
+++ b/docs/PS4/CUSA15257.md
@@ -528,7 +528,7 @@ Target File: `*`
 ```
 
 ### 62. -- Swap Food Items --
-### 63. RED:INFO:You must have the in-game max quantity, before using any of these.
+### 63. You must have the in-game max quantity, before using any of these.
 ### 64. When chapter 1 starts, max out money & buy everything out of the shop
 ### 65. then apply these cheats
 ### 66. Replace Bitter Chocolate With Sweet Chocolate
@@ -607,7 +607,7 @@ Target File: `*`
 28000004 3B9AC9FF
 ```
 
-### 74. RED:INFO:Must Have all of them to apply, may break save otherwise
+### 74. Must Have all of them to apply, may break save otherwise
 ### 75. Set All Material To 999999999
 
 Target File: `*`
@@ -734,7 +734,7 @@ Target File: `*`
 
 ### 80. -- Loot pool modifier --
 ### 81. This when you purify torments to get a set amount of items from the loot pool
-### 82. Loot Pool: (ATK/Down) [Rare - I] - SLOT 1
+### 82. Loot Pool: (ATK/Down) (Rare - I) - SLOT 1
 
 Target File: `*`
 
@@ -752,7 +752,7 @@ A000CD44 00000025
 62000000 62000000
 ```
 
-### 83. Loot Pool: (ATK/Middle) [Rare - II] - SLOT 2
+### 83. Loot Pool: (ATK/Middle) (Rare - II) - SLOT 2
 
 Target File: `*`
 
@@ -770,7 +770,7 @@ A000CD44 00000025
 62000000 62000000
 ```
 
-### 84. Loot Pool: (ATK/UP) [Rare - III] - SLOT 3
+### 84. Loot Pool: (ATK/UP) (Rare - III) - SLOT 3
 
 Target File: `*`
 
@@ -788,7 +788,7 @@ A000CD44 00000025
 62000000 62000000
 ```
 
-### 85. Loot Pool: (DEF/Down) [Rare - I] - SLOT 4
+### 85. Loot Pool: (DEF/Down) (Rare - I) - SLOT 4
 
 Target File: `*`
 
@@ -806,7 +806,7 @@ A000CD44 00000025
 62000000 62000000
 ```
 
-### 86. Loot Pool: (DEF/Middle) [Rare - II] - SLOT 5
+### 86. Loot Pool: (DEF/Middle) (Rare - II) - SLOT 5
 
 Target File: `*`
 
@@ -824,7 +824,7 @@ A000CD44 00000025
 62000000 62000000
 ```
 
-### 87. Loot Pool: (DEF/UP) [Rare - III] - SLOT 1
+### 87. Loot Pool: (DEF/UP) (Rare - III) - SLOT 1
 
 Target File: `*`
 
@@ -842,7 +842,7 @@ A000CD44 00000025
 62000000 62000000
 ```
 
-### 88. Loot Pool: Kuon's Feelings (ATK) [Rare - III] - SLOT 2
+### 88. Loot Pool: Kuon's Feelings (ATK) (Rare - III) - SLOT 2
 
 Target File: `*`
 
@@ -860,7 +860,7 @@ A000CD44 00000025
 62000000 62000000
 ```
 
-### 89. Loot Pool: Parting Thought (ATK) [Rare - III] - SLOT 3
+### 89. Loot Pool: Parting Thought (ATK) (Rare - III) - SLOT 3
 
 Target File: `*`
 
@@ -878,7 +878,7 @@ A000CD44 00000025
 62000000 62000000
 ```
 
-### 90. Loot Pool: Evil Thought (ATK) [Rare - III] - SLOT 4
+### 90. Loot Pool: Evil Thought (ATK) (Rare - III) - SLOT 4
 
 Target File: `*`
 
@@ -896,7 +896,7 @@ A000CD44 00000025
 62000000 62000000
 ```
 
-### 91. Loot Pool: Pure Thought (ATK) [Rare - III] - SLOT 5
+### 91. Loot Pool: Pure Thought (ATK) (Rare - III) - SLOT 5
 
 Target File: `*`
 
@@ -914,7 +914,7 @@ A000CD44 00000025
 62000000 62000000
 ```
 
-### 92. Loot Pool: Kuon's Thought (DEF) [Rare - III] - SLOT 1
+### 92. Loot Pool: Kuon's Thought (DEF) (Rare - III) - SLOT 1
 
 Target File: `*`
 
@@ -932,7 +932,7 @@ A000CD44 00000025
 62000000 62000000
 ```
 
-### 93. Loot Pool: Parting Thought (DEF) [Rare - III] - SLOT 2
+### 93. Loot Pool: Parting Thought (DEF) (Rare - III) - SLOT 2
 
 Target File: `*`
 
@@ -950,7 +950,7 @@ A000CD44 00000025
 62000000 62000000
 ```
 
-### 94. Loot Pool: Evil Thought (DEF) [Rare - III] - SLOT 3
+### 94. Loot Pool: Evil Thought (DEF) (Rare - III) - SLOT 3
 
 Target File: `*`
 
@@ -968,7 +968,7 @@ A000CD44 00000025
 62000000 62000000
 ```
 
-### 95. Loot Pool: Pure Thought (DEF) [Rare - III] - SLOT 4
+### 95. Loot Pool: Pure Thought (DEF) (Rare - III) - SLOT 4
 
 Target File: `*`
 
@@ -987,4 +987,4 @@ A000CD44 00000025
 ```
 
 ### 96. Editable Templates Below
-### 97. RED:INFO:Only Use these if the above cheats aren't enough & you know what you are doing!
+### 97. Only Use these if the above cheats aren't enough & you know what you are doing!
