--- a/docs/PS3/BLES01623.md
+++ b/docs/PS3/BLES01623.md
@@ -1,6 +1,6 @@
 # BLES01623.savepatch
 
-### 1. red:INFO: Currently BSD is not compatible with this title. This title has 2nd layer encryption.
+### 1.  Currently BSD is not compatible with this title. This title has 2nd layer encryption.
 ### 2. Unlock Everything
 
 Target File: `BLES01623SYSTEM_SAVE\SAVE_SYS.DAT`
