--- a/docs/PS3/BLES01667.md
+++ b/docs/PS3/BLES01667.md
@@ -1,6 +1,6 @@
 # BLES01667.savepatch
 
-### 1. red:INFO: Currently BSD is not compatible with this title. This title has 2nd layer encryption.
+### 1.  Currently BSD is not compatible with this title. This title has 2nd layer encryption.
 ### 2. Max Money
 
 Target File: `BLES01667AC3AC3_*\AC3_*`
