--- a/docs/PS3/BLJM60581.md
+++ b/docs/PS3/BLJM60581.md
@@ -12,7 +12,7 @@ Target File: `BLJM60581-SYS/SYSTEM.DAT`
 ### 3. Grand Prix Data
 ### 4. Spi Coin 9999999
 
-Target File: `BLJM60581-GPX-**/GRNDPRIX.DAT`
+Target File: `BLJM60581-GPX-*\GRNDPRIX.DAT`
 
 ```
 2001DEA0 0098967F
@@ -20,7 +20,7 @@ Target File: `BLJM60581-GPX-**/GRNDPRIX.DAT`
 
 ### 5. Saihai Point 9999(Max)
 
-Target File: `BLJM60581-GPX-**/GRNDPRIX.DAT`
+Target File: `BLJM60581-GPX-*\GRNDPRIX.DAT`
 
 ```
 1001B512 0000270F
@@ -29,7 +29,7 @@ Target File: `BLJM60581-GPX-**/GRNDPRIX.DAT`
 ### 6. Star Player Data
 ### 7. Pitcher Exp All 999999
 
-Target File: `BLJM60581-SPL-**/STARPLYR.DAT`
+Target File: `BLJM60581-SPL-*\STARPLYR.DAT`
 
 ```
 200099A8 0001869F
@@ -45,7 +45,7 @@ Target File: `BLJM60581-SPL-**/STARPLYR.DAT`
 
 ### 8. Batter Exp All 99999
 
-Target File: `BLJM60581-SPL-**/STARPLYR.DAT`
+Target File: `BLJM60581-SPL-*\STARPLYR.DAT`
 
 ```
 200099B8 0001869F
@@ -58,7 +58,7 @@ Target File: `BLJM60581-SPL-**/STARPLYR.DAT`
 ### 9. Management Data
 ### 10. Exp All 99999
 
-Target File: `BLJM60581-FRG-**/FRNGAME.DAT`
+Target File: `BLJM60581-FRG-*\FRNGAME.DAT`
 
 ```
 200C99FC 0001869F
@@ -74,7 +74,7 @@ Target File: `BLJM60581-FRG-**/FRNGAME.DAT`
 
 ### 11. Assistant Status All Max(200) - Urushido Rina *1st year
 
-Target File: `BLJM60581-FRG-**/FRNGAME.DAT`
+Target File: `BLJM60581-FRG-*\FRNGAME.DAT`
 
 ```
 80020004 38000040
@@ -85,7 +85,7 @@ Target File: `BLJM60581-FRG-**/FRNGAME.DAT`
 
 ### 12. Assistant Status All Max(200) - Mikage Hashiguchi *1st year
 
-Target File: `BLJM60581-FRG-**/FRNGAME.DAT`
+Target File: `BLJM60581-FRG-*\FRNGAME.DAT`
 
 ```
 80020004 01014101
@@ -96,7 +96,7 @@ Target File: `BLJM60581-FRG-**/FRNGAME.DAT`
 
 ### 13. Assistant Status All Max(200) - Keika Sonogami *1st year
 
-Target File: `BLJM60581-FRG-**/FRNGAME.DAT`
+Target File: `BLJM60581-FRG-*\FRNGAME.DAT`
 
 ```
 80020004 02024A0A
@@ -107,7 +107,7 @@ Target File: `BLJM60581-FRG-**/FRNGAME.DAT`
 
 ### 14. Assistant Status All Max(200) - Kanae Maniwa *1st year
 
-Target File: `BLJM60581-FRG-**/FRNGAME.DAT`
+Target File: `BLJM60581-FRG-*\FRNGAME.DAT`
 
 ```
 80020004 03035919
@@ -118,7 +118,7 @@ Target File: `BLJM60581-FRG-**/FRNGAME.DAT`
 
 ### 15. Assistant Status All Max(200) - Kaho Yukino *1st year
 
-Target File: `BLJM60581-FRG-**/FRNGAME.DAT`
+Target File: `BLJM60581-FRG-*\FRNGAME.DAT`
 
 ```
 80020004 04045010
@@ -129,7 +129,7 @@ Target File: `BLJM60581-FRG-**/FRNGAME.DAT`
 
 ### 16. Assistant Status All Max(200) - Nei Mizukoshi *1st year
 
-Target File: `BLJM60581-FRG-**/FRNGAME.DAT`
+Target File: `BLJM60581-FRG-*\FRNGAME.DAT`
 
 ```
 80020004 05054808
@@ -140,7 +140,7 @@ Target File: `BLJM60581-FRG-**/FRNGAME.DAT`
 
 ### 17. Assistant Stutus All Max(200) - Urushido Rina + Four Persons *1st year
 
-Target File: `BLJM60581-FRG-**/FRNGAME.DAT`
+Target File: `BLJM60581-FRG-*\FRNGAME.DAT`
 
 ```
 80020004 38000040
@@ -152,7 +152,7 @@ Target File: `BLJM60581-FRG-**/FRNGAME.DAT`
 
 ### 18. Assistant Stutus All Max(200) - Mikage Hashiguchi + Four Persons *1st year
 
-Target File: `BLJM60581-FRG-**/FRNGAME.DAT`
+Target File: `BLJM60581-FRG-*\FRNGAME.DAT`
 
 ```
 80020004 01014101
@@ -164,7 +164,7 @@ Target File: `BLJM60581-FRG-**/FRNGAME.DAT`
 
 ### 19. Assistant Stutus All Max(200) - Keika Sonogami + Four Persons *1st year
 
-Target File: `BLJM60581-FRG-**/FRNGAME.DAT`
+Target File: `BLJM60581-FRG-*\FRNGAME.DAT`
 
 ```
 80020004 02024A0A
@@ -176,7 +176,7 @@ Target File: `BLJM60581-FRG-**/FRNGAME.DAT`
 
 ### 20. Assistant Stutus All Max(200) - Maniwa Kanae + Four Persons *1st year
 
-Target File: `BLJM60581-FRG-**/FRNGAME.DAT`
+Target File: `BLJM60581-FRG-*\FRNGAME.DAT`
 
 ```
 80020004 03035919
@@ -188,7 +188,7 @@ Target File: `BLJM60581-FRG-**/FRNGAME.DAT`
 
 ### 21. Assistant Stutus All Max(200) - Kaho Yukino + Four Persons *1st year
 
-Target File: `BLJM60581-FRG-**/FRNGAME.DAT`
+Target File: `BLJM60581-FRG-*\FRNGAME.DAT`
 
 ```
 80020004 04045010
@@ -200,7 +200,7 @@ Target File: `BLJM60581-FRG-**/FRNGAME.DAT`
 
 ### 22. Assistant Stutus All Max(200) - Nei Mizukoshi + Four Persons *1st year
 
-Target File: `BLJM60581-FRG-**/FRNGAME.DAT`
+Target File: `BLJM60581-FRG-*\FRNGAME.DAT`
 
 ```
 80020004 05054808
