--- a/docs/PS3/BLUS30537.md
+++ b/docs/PS3/BLUS30537.md
@@ -1,6 +1,6 @@
 # BLUS30537.savepatch
 
-### 1. red:INFO: Currently BSD is not compatible with this title. This title has 2nd layer encryption.
+### 1.  Currently BSD is not compatible with this title. This title has 2nd layer encryption.
 ### 2. Max Money
 
 Target File: `BLUS30537AC2AC2_*\AC2_*.SAV`
