--- a/docs/PS4/CUSA00207.md
+++ b/docs/PS4/CUSA00207.md
@@ -3,7 +3,7 @@
 ### 1. Untested - Make sure to backup your save data first
 ### 2. Max Blood Stone Shard (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 B80B0040
@@ -14,7 +14,7 @@ Target File: `*`
 
 ### 3. Max Twin Blood Stone Shards (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 C20B0040
@@ -25,7 +25,7 @@ Target File: `*`
 
 ### 4. Max Blood Stone Chunk (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 CC0B0040
@@ -36,7 +36,7 @@ Target File: `*`
 
 ### 5. Max Blood Rock (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 D60B0040
@@ -47,7 +47,7 @@ Target File: `*`
 
 ### 6. Max Blood Stone Shard (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 B80B0040
@@ -58,7 +58,7 @@ Target File: `*`
 
 ### 7. Max Twin Blood Stone Shards (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 C20B0040
@@ -69,7 +69,7 @@ Target File: `*`
 
 ### 8. Max Blood Stone Chunk (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 CC0B0040
@@ -80,7 +80,7 @@ Target File: `*`
 
 ### 9. Max Blood Rock (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 D60B0040
@@ -91,7 +91,7 @@ Target File: `*`
 
 ### 10. Chikage+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 80841E00
@@ -105,7 +105,7 @@ Target File: `*`
 
 ### 11. Blade of Mercy+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 00093D00
@@ -119,7 +119,7 @@ Target File: `*`
 
 ### 12. Hunter Axe+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 404B4C00
@@ -133,7 +133,7 @@ Target File: `*`
 
 ### 13. Burial Blade+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 E0D14D00
@@ -147,7 +147,7 @@ Target File: `*`
 
 ### 14. Hunter Blunderbuss+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 808D5B00
@@ -161,7 +161,7 @@ Target File: `*`
 
 ### 15. Ludwig’s Rifle+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 20145D00
@@ -175,7 +175,7 @@ Target File: `*`
 
 ### 16. Saw Cleaver+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 C0CF6A00
@@ -189,7 +189,7 @@ Target File: `*`
 
 ### 17. Saw Spear+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 60566C00
@@ -203,7 +203,7 @@ Target File: `*`
 
 ### 18. Kirkhammer+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 00127A00
@@ -217,7 +217,7 @@ Target File: `*`
 
 ### 19. Ludwig’s Holy Blade+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 A0987B00
@@ -231,7 +231,7 @@ Target File: `*`
 
 ### 20. Beast Claw+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 40548900
@@ -245,7 +245,7 @@ Target File: `*`
 
 ### 21. Cannon+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 C0E1E400
@@ -259,7 +259,7 @@ Target File: `*`
 
 ### 22. Rosmarinus+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 80A81201
@@ -273,7 +273,7 @@ Target File: `*`
 
 ### 23. Flamesprayer+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 202F1401
@@ -287,7 +287,7 @@ Target File: `*`
 
 ### 24. Wooden Shield (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 C0EA2101
@@ -300,7 +300,7 @@ Target File: `*`
 
 ### 25. Loch Shield (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 60712301
@@ -313,7 +313,7 @@ Target File: `*`
 
 ### 26. Hunter’s Torch+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 002D3101
@@ -327,7 +327,7 @@ Target File: `*`
 
 ### 27. Torch (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 A0B33201
@@ -340,7 +340,7 @@ Target File: `*`
 
 ### 28. Threaded Cane+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 80B14F01
@@ -354,7 +354,7 @@ Target File: `*`
 
 ### 29. Beasthunter Saif+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 C0F35E01
@@ -368,7 +368,7 @@ Target File: `*`
 
 ### 30. Beast Cutter+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 00366E01
@@ -382,7 +382,7 @@ Target File: `*`
 
 ### 31. Amygdalan Arm+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 40787D01
@@ -396,7 +396,7 @@ Target File: `*`
 
 ### 32. Holy Moonlight Sword+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 80BA8C01
@@ -410,7 +410,7 @@ Target File: `*`
 
 ### 33. Rakuyo+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 C0FC9B01
@@ -424,7 +424,7 @@ Target File: `*`
 
 ### 34. Boom Hammer+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 003FAB01
@@ -438,7 +438,7 @@ Target File: `*`
 
 ### 35. Bloodletter+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 4081BA01
@@ -452,7 +452,7 @@ Target File: `*`
 
 ### 36. Church Pick+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 80C3C901
@@ -466,7 +466,7 @@ Target File: `*`
 
 ### 37. Whirligig Saw+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 C005D901
@@ -480,7 +480,7 @@ Target File: `*`
 
 ### 38. Simon’s Bowblade+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 0048E801
@@ -494,7 +494,7 @@ Target File: `*`
 
 ### 39. Gatling Gun+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 408AF701
@@ -508,7 +508,7 @@ Target File: `*`
 
 ### 40. Fist of Gratia+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 80CC0602
@@ -522,7 +522,7 @@ Target File: `*`
 
 ### 41. Church Cannon+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 C00E1602
@@ -536,7 +536,7 @@ Target File: `*`
 
 ### 42. Piercing Rifle+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 00512502
@@ -550,7 +550,7 @@ Target File: `*`
 
 ### 43. Kos Parasite+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 80D54302
@@ -564,9 +564,7 @@ Target File: `*`
 
 ### 44. Revered Great One Coldblood (Converts amount of Great One Coldblood, must have one Great One Coldblood in inventory)
 
-Highest tier of Great One Coldblood listed in official guide but never found. When used gain 100k of Blood Echoes. [More info](https://www.bloodborne-wiki.com/2017/05/revered-great-one-coldblood.html).
-
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 380600B0
@@ -577,9 +575,7 @@ Target File: `*`
 
 ### 45. Guidance Rune Tier 3 (Converts Tier 1 to Tier 3, must have Guidance Rune Tier 1 in inventory)
 
-Highest tier of Guidance Caryll Rune, listed in official guide but never found within game. Boosts rally potential +30%. [More info](https://www.bloodborne-wiki.com/2015/11/guidance.html).
-
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 40960180
@@ -592,9 +588,7 @@ Target File: `*`
 
 ### 46. Isz Glitch Cure (Character must be affected by Isz Glitch)
 
-The Isz Glitch is a bug in Bloodborne that prevents certain characters from creating all possible Isz dungeons. [More info](https://github.com/jrson83/bloodborne-isz-glitch-cure).
-
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 07001300
