--- a/docs/PS4/CUSA00900.md
+++ b/docs/PS4/CUSA00900.md
@@ -3,7 +3,7 @@
 ### 1. Untested - Make sure to backup your save data first
 ### 2. Max Blood Stone Shard (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 B80B0040
@@ -14,7 +14,7 @@ Target File: `*`
 
 ### 3. Max Twin Blood Stone Shards (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 C20B0040
@@ -25,7 +25,7 @@ Target File: `*`
 
 ### 4. Max Blood Stone Chunk (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 CC0B0040
@@ -36,7 +36,7 @@ Target File: `*`
 
 ### 5. Max Blood Rock (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 D60B0040
@@ -48,7 +48,7 @@ Target File: `*`
 ### 6. MAX ITEMS
 ### 7. Max Blood Stone Shard (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 B80B0040
@@ -59,7 +59,7 @@ Target File: `*`
 
 ### 8. Max Twin Blood Stone Shards (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 C20B0040
@@ -70,7 +70,7 @@ Target File: `*`
 
 ### 9. Max Blood Stone Chunk (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 CC0B0040
@@ -81,7 +81,7 @@ Target File: `*`
 
 ### 10. Max Blood Rock (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 D60B0040
@@ -92,7 +92,7 @@ Target File: `*`
 
 ### 11. Max Ritual Blood (1) (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 581B0040
@@ -103,7 +103,7 @@ Target File: `*`
 
 ### 12. Max Ritual Blood (2) (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 591B0040
@@ -114,7 +114,7 @@ Target File: `*`
 
 ### 13. Max Ritual Blood (3) (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 5A1B0040
@@ -125,7 +125,7 @@ Target File: `*`
 
 ### 14. Max Ritual Blood (4) (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 5B1B0040
@@ -136,7 +136,7 @@ Target File: `*`
 
 ### 15. Max Ritual Blood (5) (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 5C1B0040
@@ -147,7 +147,7 @@ Target File: `*`
 
 ### 16. Max Coldblood Flowerbud (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 641B0040
@@ -158,7 +158,7 @@ Target File: `*`
 
 ### 17. Max Coldblood Flower Bulb (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 651B0040
@@ -169,7 +169,7 @@ Target File: `*`
 
 ### 18. Max Blooming Coldblood Flower (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 661B0040
@@ -180,7 +180,7 @@ Target File: `*`
 
 ### 19. Max Tomb Mold (1) (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 6C1B0040
@@ -191,7 +191,7 @@ Target File: `*`
 
 ### 20. Max Tomb Mold (2) (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 6D1B0040
@@ -202,7 +202,7 @@ Target File: `*`
 
 ### 21. Max Tomb Mold (3) (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 6E1B0040
@@ -213,7 +213,7 @@ Target File: `*`
 
 ### 22. Max Tomb Mold (4) (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 6F1B0040
@@ -224,7 +224,7 @@ Target File: `*`
 
 ### 23. Max Tomb Mold (5) (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 701B0040
@@ -235,7 +235,7 @@ Target File: `*`
 
 ### 24. Max Arcane Haze (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 8A1B0040
@@ -246,7 +246,7 @@ Target File: `*`
 
 ### 25. Max Pearl Slug (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 BC1B0040
@@ -257,7 +257,7 @@ Target File: `*`
 
 ### 26. Max Red Jelly (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 C61B0040
@@ -268,7 +268,7 @@ Target File: `*`
 
 ### 27. Max Sage's Wrist (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 D01B0040
@@ -279,7 +279,7 @@ Target File: `*`
 
 ### 28. Max Sage's Hair (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 D11B0040
@@ -290,7 +290,7 @@ Target File: `*`
 
 ### 29. Max Inflicted Organ (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 DA1B0040
@@ -301,7 +301,7 @@ Target File: `*`
 
 ### 30. Max Yellow Backbone (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 DB1B0040
@@ -312,7 +312,7 @@ Target File: `*`
 
 ### 31. Max Bastard Of Loran (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 E41B0040
@@ -323,7 +323,7 @@ Target File: `*`
 
 ### 32. Max Bloodshot Eyeball (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 EE1B0040
@@ -334,7 +334,7 @@ Target File: `*`
 
 ### 33. Max Living String (Must Have 1 in inventory or Storage)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 201C0040
@@ -345,7 +345,7 @@ Target File: `*`
 
 ### 34. Turn Pebble into Blood Stone Shard (Must have at least 1 Pebble) (Use One at a time)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 CE040040
@@ -354,7 +354,7 @@ Target File: `*`
 
 ### 35. Turn Pebble into Twin Blood Stone Shards (Must have at least 1 Pebble) (Use One at a time)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 CE040040
@@ -363,7 +363,7 @@ Target File: `*`
 
 ### 36. Turn Pebble into Blood Stone Chunk (Must have at least 1 Pebble) (Use One at a time)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 CE040040
@@ -372,7 +372,7 @@ Target File: `*`
 
 ### 37. Turn Pebble into Blood Rock (Must have at least 1 Pebble) (Use One at a time)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 CE040040
@@ -382,7 +382,7 @@ Target File: `*`
 ### 38. Weapons
 ### 39. Chikage+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 80841E00
@@ -396,7 +396,7 @@ Target File: `*`
 
 ### 40. Blade of Mercy+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 00093D00
@@ -410,7 +410,7 @@ Target File: `*`
 
 ### 41. Hunter Axe+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 404B4C00
@@ -424,7 +424,7 @@ Target File: `*`
 
 ### 42. Burial Blade+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 E0D14D00
@@ -438,7 +438,7 @@ Target File: `*`
 
 ### 43. Hunter Blunderbuss+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 808D5B00
@@ -452,7 +452,7 @@ Target File: `*`
 
 ### 44. Ludwig's Rifle+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 20145D00
@@ -466,7 +466,7 @@ Target File: `*`
 
 ### 45. Saw Cleaver+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 C0CF6A00
@@ -480,7 +480,7 @@ Target File: `*`
 
 ### 46. Saw Spear+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 60566C00
@@ -494,7 +494,7 @@ Target File: `*`
 
 ### 47. Kirkhammer+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 00127A00
@@ -508,7 +508,7 @@ Target File: `*`
 
 ### 48. Ludwig's Holy Blade+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 A0987B00
@@ -522,7 +522,7 @@ Target File: `*`
 
 ### 49. Beast Claw+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 40548900
@@ -536,7 +536,7 @@ Target File: `*`
 
 ### 50. Rifle Spear+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 80969800
@@ -550,7 +550,7 @@ Target File: `*`
 
 ### 51. Reiterpallasch+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 201D9A00
@@ -564,7 +564,7 @@ Target File: `*`
 
 ### 52. Stake Driver+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 C0D8A700
@@ -578,7 +578,7 @@ Target File: `*`
 
 ### 53. Logarius' Wheel+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 001BB700
@@ -592,7 +592,7 @@ Target File: `*`
 
 ### 54. Bloody Logarius' Wheel+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 8053B800
@@ -606,7 +606,7 @@ Target File: `*`
 
 ### 55. Tonitrus+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 405DC600
@@ -620,7 +620,7 @@ Target File: `*`
 
 ### 56. Hunter Pistol+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 809FD500
@@ -634,7 +634,7 @@ Target File: `*`
 
 ### 57. Evelyn+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 2026D700
@@ -648,7 +648,7 @@ Target File: `*`
 
 ### 58. Repeating Pistol+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 C0ACD800
@@ -662,7 +662,7 @@ Target File: `*`
 
 ### 59. Cannon+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 C0E1E400
@@ -676,7 +676,7 @@ Target File: `*`
 
 ### 60. Rosmarinus+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 80A81201
@@ -690,7 +690,7 @@ Target File: `*`
 
 ### 61. Flamesprayer+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 202F1401
@@ -704,7 +704,7 @@ Target File: `*`
 
 ### 62. Wooden Shield (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 C0EA2101
@@ -717,7 +717,7 @@ Target File: `*`
 
 ### 63. Loch Shield (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 60712301
@@ -730,7 +730,7 @@ Target File: `*`
 
 ### 64. Hunter's Torch+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 002D3101
@@ -744,7 +744,7 @@ Target File: `*`
 
 ### 65. Torch (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 A0B33201
@@ -757,7 +757,7 @@ Target File: `*`
 
 ### 66. Threaded Cane+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 80B14F01
@@ -771,7 +771,7 @@ Target File: `*`
 
 ### 67. Beasthunter Saif+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 C0F35E01
@@ -785,7 +785,7 @@ Target File: `*`
 
 ### 68. Beast Cutter+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 00366E01
@@ -799,7 +799,7 @@ Target File: `*`
 
 ### 69. Amygdalan Arm+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 40787D01
@@ -813,7 +813,7 @@ Target File: `*`
 
 ### 70. Holy Moonlight Sword+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 80BA8C01
@@ -827,7 +827,7 @@ Target File: `*`
 
 ### 71. Rakuyo+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 C0FC9B01
@@ -841,7 +841,7 @@ Target File: `*`
 
 ### 72. Boom Hammer+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 003FAB01
@@ -855,7 +855,7 @@ Target File: `*`
 
 ### 73. Bloodletter+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 4081BA01
@@ -869,7 +869,7 @@ Target File: `*`
 
 ### 74. Church Pick+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 80C3C901
@@ -883,7 +883,7 @@ Target File: `*`
 
 ### 75. Whirligig Saw+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 C005D901
@@ -897,7 +897,7 @@ Target File: `*`
 
 ### 76. Simon's Bowblade+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 0048E801
@@ -911,7 +911,7 @@ Target File: `*`
 
 ### 77. Gatling Gun+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 408AF701
@@ -925,7 +925,7 @@ Target File: `*`
 
 ### 78. Fist of Gratia+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 80CC0602
@@ -939,7 +939,7 @@ Target File: `*`
 
 ### 79. Church Cannon+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 C00E1602
@@ -953,7 +953,7 @@ Target File: `*`
 
 ### 80. Piercing Rifle+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 00512502
@@ -967,7 +967,7 @@ Target File: `*`
 
 ### 81. Kos Parasite+10 (Must be +0)
 
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 80D54302
@@ -979,11 +979,10 @@ Target File: `*`
 28000030 0000003F
 ```
 
-### 82. Revered Great One Coldblood (Converts amount of Great One Coldblood, must have one Great One Coldblood in inventory)
+### 82. Miscellaneous
+### 83. Revered Great One Coldblood (Converts amount of Great One Coldblood, must have one Great One Coldblood in inventory)
 
-Highest tier of Great One Coldblood listed in official guide but never found. When used gain 100k of Blood Echoes. [More info](https://www.bloodborne-wiki.com/2017/05/revered-great-one-coldblood.html).
-
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 380600B0
@@ -992,11 +991,9 @@ Target File: `*`
 08000000 0000003A
 ```
 
-### 83. Guidance Rune Tier 3 (Converts Tier 1 to Tier 3, must have Guidance Rune Tier 1 in inventory)
+### 84. Guidance Rune Tier 3 (Converts Tier 1 to Tier 3, must have Guidance Rune Tier 1 in inventory)
 
-Highest tier of Guidance Caryll Rune, listed in official guide but never found within game. Boosts rally potential +30%. [More info](https://www.bloodborne-wiki.com/2015/11/guidance.html).
-
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 40960180
@@ -1007,11 +1004,9 @@ Target File: `*`
 08000000 00000042
 ```
 
-### 84. Isz Glitch Cure (Character must be affected by Isz Glitch)
+### 85. Isz Glitch Cure (Character must be affected by Isz Glitch)
 
-The Isz Glitch is a bug in Bloodborne that prevents certain characters from creating all possible Isz dungeons. [More info](https://github.com/jrson83/bloodborne-isz-glitch-cure).
-
-Target File: `*`
+Target File: `userdata00*`
 
 ```
 80010004 07001300
