--- a/docs/PS4/CUSA12605.md
+++ b/docs/PS4/CUSA12605.md
@@ -1,21 +1,21 @@
 # CUSA12605.savepatch
 
 ### 1. Untested - Make sure to backup your save data first
-### 2. Max HP-Stamina (9999999)
+### 2. Max HP-Stamina (99999)
 
 Target File: `*`
 
 ```
-80010009 80BFFFFF
-FFFFFF42 60000000
+80010007 80BFFFFF 
+FFFFFF00 00000000
 93000000 000000CD
 A8000000 00000030
-7F96184B 7F96184B
-7F96184B 7F96184B
-7F96184B 7F96184B
-7F96184B 7F96184B
-7F96184B 7F96184B
-7F96184B 7F96184B
+804FC347 804FC347
+804FC347 804FC347
+804FC347 804FC347
+804FC347 804FC347
+804FC347 804FC347
+804FC347 804FC347
 ```
 
 ### 3. 99999999 of all Resources all locations
