--- a/docs/PS4/CUSA12605.md
+++ b/docs/PS4/CUSA12605.md
@@ -1,7 +1,7 @@
 # CUSA12605.savepatch
 
 ### 1. Untested - Make sure to backup your save data first
-### 2. Max HP-Stamina (99999)
+### 2. Max HP-Stamina (9999999)
 
 Target File: `*`
 
@@ -11,12 +11,12 @@ Target File: `*`
 1F000000 00000000
 93000000 0000007B
 A8000000 00000030
-804FC347 804FC347
-804FC347 804FC347
-804FC347 804FC347
-804FC347 804FC347
-804FC347 804FC347
-804FC347 804FC347
+7F96184B 7F96184B 
+7F96184B 7F96184B 
+00000000 7F96184B 
+7F96184B 7F96184B 
+7F96184B 7F96184B 
+7F96184B 7F96184B
 ```
 
 ### 3. 99999999 of all Resources all locations
