Added Death Stranding Health-Stamina QC, Ran Docs Script (#7)
* Added Death Stranding Health-Stamina QC, Ran Docs Script

* quick fix

* DS better reliable pointer

* DS Fix Stamina

--- a/docs/PS4/CUSA12605.md
+++ b/docs/PS4/CUSA12605.md
@@ -1,7 +1,25 @@
 # CUSA12605.savepatch
 
 ### 1. Untested - Make sure to backup your save data first
-### 2. 99999999 of all Resources all locations
+### 2. Max HP-Stamina (9999999)
+
+Target File: `*`
+
+```
+8001000E FFDB0FC9 
+40DB0FC9 40FFFFFF 
+1F000000 00000000
+93000000 0000007B
+A8000000 00000030
+7F96184B 7F96184B 
+7F96184B 7F96184B 
+00000000 7F96184B 
+7F96184B 7F96184B 
+7F96184B 7F96184B 
+7F96184B 7F96184B
+```
+
+### 3. 99999999 of all Resources all locations
 
 Target File: `*`
 
@@ -23,7 +41,7 @@ Target File: `*`
 40280098 00000000
 ```
 
-### 3. Eastern Region: Capital Knot City - Individual Set Areas Materials to 99999999
+### 4. Eastern Region: Capital Knot City - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -40,7 +58,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 4. Eastern Region: Waystation West of Capital Knot City - Individual Set Areas Materials to 99999999
+### 5. Eastern Region: Waystation West of Capital Knot City - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -57,7 +75,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 5. Eastern Region: Distribution Center West of Capital Knot City - Individual Set Areas Materials to 99999999
+### 6. Eastern Region: Distribution Center West of Capital Knot City - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -74,7 +92,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 6. Eastern Region: Wind Farm - Individual Set Areas Materials to 99999999
+### 7. Eastern Region: Wind Farm - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -91,7 +109,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 7. Eastern Region: Port Knot City - Individual Set Areas Materials to 99999999
+### 8. Eastern Region: Port Knot City - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -108,7 +126,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 8. Eastern Region: Musician - Individual Set Areas Materials to 99999999
+### 9. Eastern Region: Musician - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -125,7 +143,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 9. Central Region: Engineer - Individual Set Areas Materials to 99999999
+### 10. Central Region: Engineer - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -142,7 +160,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 10. Central Region: Elder - Individual Set Areas Materials to 99999999
+### 11. Central Region: Elder - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -159,7 +177,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 11. Central Region: Craftsman - Individual Set Areas Materials to 99999999
+### 12. Central Region: Craftsman - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -176,7 +194,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 12. Central Region: Timefall Farm - Individual Set Areas Materials to 99999999
+### 13. Central Region: Timefall Farm - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -193,7 +211,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 13. Central Region: Junk Dealer - Individual Set Areas Materials to 99999999
+### 14. Central Region: Junk Dealer - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -210,7 +228,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 14. Central Region: Chiral Artist's Studio - Individual Set Areas Materials to 99999999
+### 15. Central Region: Chiral Artist's Studio - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -227,7 +245,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 15. Central Region: Waystation North of Mountain Knot City - Individual Set Areas Materials to 99999999
+### 16. Central Region: Waystation North of Mountain Knot City - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -244,7 +262,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 16. Central Region: Peter Englert - Individual Set Areas Materials to 99999999
+### 17. Central Region: Peter Englert - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -261,7 +279,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 17. Central Region: Film Director - Individual Set Areas Materials to 99999999
+### 18. Central Region: Film Director - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -278,7 +296,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 18. Central Region: Cosplayer - Individual Set Areas Materials to 99999999
+### 19. Central Region: Cosplayer - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -295,7 +313,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 19. Central Region: Collector - Individual Set Areas Materials to 99999999
+### 20. Central Region: Collector - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -312,7 +330,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 20. Central Region: Lake Knot City - Individual Set Areas Materials to 99999999
+### 21. Central Region: Lake Knot City - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -329,7 +347,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 21. Central Region: Distribution Center South of Lake Knot City - Individual Set Areas Materials to 99999999
+### 22. Central Region: Distribution Center South of Lake Knot City - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -346,7 +364,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 22. Central Region: Weather Station - Individual Set Areas Materials to 99999999
+### 23. Central Region: Weather Station - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -363,7 +381,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 23. Central Region: South Knot City - Individual Set Areas Materials to 99999999
+### 24. Central Region: South Knot City - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -380,7 +398,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 24. Central Region: Mama's Lab - Individual Set Areas Materials to 99999999
+### 25. Central Region: Mama's Lab - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -397,7 +415,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 25. Central Region: Distribution Center North of Mountain Knot City - Individual Set Areas Materials to 99999999
+### 26. Central Region: Distribution Center North of Mountain Knot City - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -414,7 +432,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 26. Central Region: Mountain Knot City - Individual Set Areas Materials to 99999999
+### 27. Central Region: Mountain Knot City - Individual Set Areas Materials to 99999999
 
 Target File: `*`
 
@@ -431,7 +449,7 @@ Target File: `*`
 2800005C 05F5E0FF
 ```
 
-### 27. Max Bandwidth
+### 28. Max Bandwidth
 
 Target File: `*`
 
@@ -458,7 +476,7 @@ Target File: `*`
 40050005 00000000
 ```
 
-### 28. Birth of a legend/growth of a legend trophy quick code (complete delivery after applying)
+### 29. Birth of a legend/growth of a legend trophy quick code (complete delivery after applying)
 
 Target File: `*`
 
@@ -468,7 +486,7 @@ Target File: `*`
 400A0004 00000000
 ```
 
-### 29. Max porter grade (complete a delivery to get all the upgrades
+### 30. Max porter grade (complete a delivery to get all the upgrades
 
 Target File: `*`
 
