--- a/docs/PS4/CUSA00552.md
+++ b/docs/PS4/CUSA00552.md
@@ -1,27 +1,102 @@
-# PS4 The Last of Us: Remastered
+# The Last of Us: Remastered
 
 `CUSA00552.savepatch`
 
 ### 1. Untested - Make sure to backup your save data first
-### 2. Infinite Current Melee Weapon
+### 2. Decrypt USR-DATA (Required)
 
-Target File: `*`
+Target File: `USR-DATA*`
+
+```
+set [end]:read(EOF-3, 4)
+set [end]:endian_swap
+set range:0x000008,[end]+7
+DECRYPT blowfish_ecb("(SH[@2>r62%5+QKpy|g6")
+```
+
+### 3. Infinite Current Melee Weapon
+
+Target File: `USR-DATA*`
 
 ```
 10004150 0000FFFF
 ```
 
-### 3. Upgrade Current Melee Weapon
+### 4. Upgrade Current Melee Weapon
 
-Target File: `*`
+Target File: `USR-DATA*`
 
 ```
 00004148 00000001
 ```
 
-### 4. Add Assault Rifle
+### 5. Difficulty levels
 
-Target File: `*`
+Target File: `USR-DATA*`
+
+```
+80010004 c8dc7f3e
+28000004 000000xx
+80010004 288D5E5B
+28000004 000000xx
+```
+
+### 6. Grounded plus mode
+
+Target File: `USR-DATA*`
+
+```
+80010004 c8dc7f3e
+28000004 00000005
+80010004 96778ebd
+28000004 00000001
+```
+
+### 7. Add Upgraded and Infinite Axe
+
+Target File: `USR-DATA*`
+
+```
+A0004134 00000029
+BB08ED37 00000000
+00000000 00000000
+00000075 01000000
+03000000 FFFF0000
+00000000 00000000
+01000000 00000000
+```
+
+### 8. Add Upgraded and Infinite Bat
+
+Target File: `USR-DATA*`
+
+```
+A0004134 00000029
+783DF18C 00000000
+00000000 00000000
+00000075 01000000
+03000000 FFFF0000
+00000000 00000000
+01000000 00000000
+```
+
+### 9. Add Upgraded and Infinite Machete
+
+Target File: `USR-DATA*`
+
+```
+A0004134 00000029
+8E346D22 00000000
+00000000 00000000
+00000075 01000000
+03000000 FFFF0000
+00000000 00000000
+01000000 00000000
+```
+
+### 10. Add Assault Rifle
+
+Target File: `USR-DATA*`
 
 ```
 A0003FB4 00000029
@@ -33,9 +108,9 @@ A0003FB4 00000029
 01000000 00000000
 ```
 
-### 5. 65K Ammo and Consumables
+### 11. 65K Ammo and Consumables
 
-Target File: `*`
+Target File: `USR-DATA*`
 
 ```
 A00041D8 00000024
@@ -44,5 +119,41 @@ FFFFFFFF 0000FFFF
 FFFFFFFF FFFF0000
 FFFFFFFF 0000FFFF
 FFFFFFFF 00000000
+```
+
+### 12. Update CRC32 checksum for USR-DATA (Required)
+
+Target File: `USR-DATA*`
+
+```
+set [block_length]:read(0x58C,4)
+set [block_length]:endian_swap
+set [block_length]:[block_length]+0x587
+set range:0x58C,[block_length]
+set [hash]:crc32
+set [hash]:endian_swap
+write at 0x588:[hash]
+```
+
+### 13. Update HMAC SHA1 checksum for USR-DATA (Required)
+
+Target File: `USR-DATA*`
+
+```
+set pointer:EOF-0x23
+set range:0x000008,pointer
+set [hash]:hmac_sha1("xM;6X%/p^L/:}-5QoA+K8:F*M!~sb(WK<E%6sW_un0a[7Gm6,()kHoXY+yI/s;Ba")
+write next (0):[hash]
+```
+
+### 14. Encrypt USR-DATA (Required)
+
+Target File: `USR-DATA*`
+
+```
+set [end]:read(EOF-3, 4)
+set [end]:endian_swap
+set range:0x000008,[end]+7
+ENCRYPT blowfish_ecb("(SH[@2>r62%5+QKpy|g6")
 ```
 
