--- a/docs/PS3/BLUS30650.md
+++ b/docs/PS3/BLUS30650.md
@@ -1,4 +1,4 @@
-#  BLUS3065 
+#  Mass Effect 2 
 
 `BLUS30650.savepatch`
 
@@ -13,7 +13,7 @@ search xxxxxxxx000000yy
 write next 0: 0098967F0098967F0098967F0098967F0098967F0098967F
 ```
 
-### 4. Update CRC32Big - CHAPTER (Required)
+### 4. Update CRC32Big - AUTO (Required)
 
 Target File: `AUTO`
 
